Fixed login page that was aligned to the left (inseat of center)

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -403,6 +403,14 @@ footer {
   background-color: #27ae60;
 }
 
+.auth-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  align-items: center;
+  text-align: center;
+}
+
 /* Gallery views */
 .gallery-buttons {
   position: absolute;
